@@ -11,6 +11,7 @@ entire history of the project is available through SVN.
 --- 2008-04-01  Release 7.12.1                                     ---
 ----------------------------------------------------------------------
 
+* new -u units option added to rtarea - Sean Morrison
 * added uniform binary object creation to mged GUI - John Anderson
 * added e, l, o, i options to mged saveview command - Sean Morrison
 
